# kube-sentinel

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  kube-sentinel-scan.yml  security.yml
examples/hardened/: networking.yaml  rbac.yaml  workloads.yaml
examples/insecure/: networking.yaml  rbac.yaml  workloads.yaml
src/kube_sentinel/: __init__.py  cli.py  cluster.py  engine.py  harden.py  k8s.py  models.py  parser.py  report.py
src/kube_sentinel/rules/: __init__.py  base.py  networking.py  rbac.py  workload.py
tests/: conftest.py  test_cli.py  test_engine.py  test_examples.py  test_harden.py  test_parser.py  test_report.py  test_robustness.py  test_rules_rbac_net.py  test_rules_workload.py  test_sarif_schema.py
